force-app/main/default/objects/BA_Perception__c/BA_Perception__c.object-meta.xml
<CustomObject>
    <label>パーセプション</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>パーセプション名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>