force-app/main/default/objects/BA_Perception__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>パーセプション</relationshipLabel>
    <relationshipName>AccountPerceptions</relationshipName>
    <type>Lookup</type>
</CustomField>