force-app/main/default/objects/BA_Perception__c/fields/ActivityPolicy__c.field-meta.xml
<CustomField>
    <fullName>ActivityPolicy__c</fullName>
    <label>活動方針</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>