force-app/main/default/objects/BA_Perception__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>パーセプション</relationshipLabel>
    <relationshipName>ContactPerceptions</relationshipName>
    <type>Lookup</type>
</CustomField>