force-app/main/default/objects/BA_Perception__c/fields/DX_Genba_2__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>サービス名の認知完了_現場決裁者</label>
    <type>Checkbox</type>
</CustomField>