force-app/main/default/objects/BA_Perception__c/fields/DX_Genba_31__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_31__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自物件でのトライアル合意_現場決裁者</label>
    <type>Checkbox</type>
</CustomField>