force-app/main/default/objects/BA_Perception__c/fields/DX_Genba_Date_2__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_Date_2__c</fullName>
    <label>サービス名の認知完了_現場決裁者_登録日</label>
    <type>Date</type>
</CustomField>