force-app/main/default/objects/BA_Perception__c/fields/DX_Genba_Date_31__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_Date_31__c</fullName>
    <label>自物件でのトライアル合意_現場決裁者_登録日</label>
    <type>Date</type>
</CustomField>