force-app/main/default/objects/BA_Perception__c/fields/DX_Honsha_3__c.field-meta.xml
<CustomField>
    <fullName>DX_Honsha_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>想定成果への合意_本社決裁者</label>
    <type>Checkbox</type>
</CustomField>