force-app/main/default/objects/BA_Perception__c/fields/DX_Honsha_Date_3__c.field-meta.xml
<CustomField>
    <fullName>DX_Honsha_Date_3__c</fullName>
    <label>想定成果への合意_本社決裁者_登録日</label>
    <type>Date</type>
</CustomField>