force-app/main/default/objects/BA_Perception__c/fields/DX_Honsha_Date_4__c.field-meta.xml
<CustomField>
    <fullName>DX_Honsha_Date_4__c</fullName>
    <label>トライアル結果の認知（良かったと認める）_本社決裁者_登録日</label>
    <type>Date</type>
</CustomField>