force-app/main/default/objects/BA_Perception__c/fields/DX_LV_d_updDate__c.field-meta.xml
<CustomField>
    <fullName>DX_LV_d_updDate__c</fullName>
    <label>パーセプションLV_変更日_d_DX</label>
    <type>Date</type>
</CustomField>