force-app/main/default/objects/BA_Perception__c/fields/DX_PerceptionLvNum__c.field-meta.xml
<CustomField>
    <fullName>DX_PerceptionLvNum__c</fullName>
    <formula>CASE(TEXT(Contact__r.BuildAppKeyman__c)
,&apos;DX推進者&apos;,
IF(DX_Suishin_9__c,&apos;10&apos;
,IF(DX_Suishin_8__c,&apos;9&apos;
,IF(DX_Suishin_7__c,&apos;8&apos;
,IF(DX_Suishin_6__c,&apos;6&apos;
,IF(DX_Suishin_5__c,&apos;5&apos;
,IF(DX_Suishin_4__c,&apos;5&apos;
,IF(DX_Suishin_3__c,&apos;4&apos;
,IF(DX_Suishin_2__c,&apos;3&apos;
,IF(DX_Suishin_1__c,&apos;2&apos;
,&apos;1&apos;)))))))))
,&apos;決裁者_現場&apos;
,IF(DX_Genba_5__c,&apos;9&apos;
,IF(DX_Genba_4__c,&apos;6&apos;
,IF(DX_Genba_31__c,&apos;6&apos;
,IF(DX_Genba_3__c,&apos;3&apos;
,IF(DX_Genba_2__c,&apos;3&apos;
,IF(DX_Genba_1__c,&apos;2&apos;
,&apos;1&apos;))))))
,&apos;決裁者_本社&apos;
,IF(DX_Honsha_5__c,&apos;10&apos;
,IF(DX_Honsha_4__c,&apos;3&apos;
,IF(DX_Honsha_2__c,&apos;3&apos;
,IF(DX_Honsha_1__c,&apos;2&apos;
,&apos;1&apos;))))
,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>パーセプションLV_DX(数字)</label>
    <type>Text</type>
</CustomField>