force-app/main/default/objects/BA_Perception__c/fields/DX_PerceptionLvText__c.field-meta.xml
<CustomField>
    <fullName>DX_PerceptionLvText__c</fullName>
    <label>パーセプションLV_DX(text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>