force-app/main/default/objects/BA_Perception__c/fields/DX_Suishin_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>問い合わせを受ける_DX推進者</label>
    <type>Checkbox</type>
</CustomField>