force-app/main/default/objects/BA_Perception__c/fields/DX_Suishin_2__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>アポイント承諾_DX推進者</label>
    <type>Checkbox</type>
</CustomField>