force-app/main/default/objects/BA_Perception__c/fields/DX_Suishin_Date_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_Date_1__c</fullName>
    <label>問い合わせを受ける_DX推進者_登録日</label>
    <type>Date</type>
</CustomField>