force-app/main/default/objects/BA_Perception__c/fields/DX_Suishin_Date_3__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_Date_3__c</fullName>
    <label>2度目以降のアポイント承諾_DX推進者_登録日</label>
    <type>Date</type>
</CustomField>