force-app/main/default/objects/BA_Perception__c/fields/Perception_lv__c.field-meta.xml
<CustomField>
    <fullName>Perception_lv__c</fullName>
    <formula>CASE(DX_PerceptionLv__c
								, &apos;zz&apos;, 0.1
								, &apos;z&apos;, 0.2
								, &apos;a&apos;, 1
								, &apos;b&apos;, 2
								, &apos;c&apos;, 3
								, &apos;d&apos;, 4
								, &apos;e&apos;, 5
								, &apos;f&apos;, 6
								, &apos;g&apos;, 7
								, &apos;h&apos;, 8
								,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>パーセプション_Lv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>