force-app/main/default/objects/BA_Perception__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>課題（削除予定）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>