force-app/main/default/objects/BA_Perception__c/fields/SubjectShow__c.field-meta.xml
<CustomField>
    <fullName>SubjectShow__c</fullName>
    <formula>IF (OR(VALUE(DX_PerceptionLvNum__c) == 0 , ISPICKVAL(Account__r.AccountStage_All__c,&apos;&apos;) ),&apos;&apos;  
  				,IF (VALUE(DX_PerceptionLvNum__c) &lt;= VALUE(TEXT(Account__r.AccountStage_All__c))
										,&apos;パーセプションLvUP&apos;
										,&apos;取引先ステージUP障害排除&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>課題</label>
    <type>Text</type>
</CustomField>